--- a/RGB2NIR/Pix2Pix_Based_RGB2NIR.ipynb
+++ b/RGB2NIR/Pix2Pix_Based_RGB2NIR.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Research_Utils.color_space_transforms import *\n",
+    "from Research_Utils.color_space_transforms import *\n\n",
     "transform_basic = transforms.Compose([\n",
     "    transforms.ToTensor(), \n",
     "    transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5]),\n",
@@ -211,24 +211,24 @@
       "lch: torch.Size([1, 3, 256, 256])\n",
       "mean_: 0.5, std_: 0.5\n",
       "\n",
-      "====== rgb_img: torch.Size([256, 256, 3]) ====== (기본 transform()에서 (std=0.5, mean=0.5)로 정규화가 적용되어서 로드된 값)\n",
+      "====== rgb_img: torch.Size([256, 256, 3]) ======\n",
       "rgb_img[0].min(): -0.2471\trgb_img[0].max(): 1.0000\n",
       "rgb_img[1].min(): -0.2471\trgb_img[1].max(): 1.0000\n",
       "rgb_img[2].min(): -0.2392\trgb_img[2].max(): 1.0000\n",
       "\n",
       "\n",
-      "====== ycbcr_img: torch.Size([256, 256, 3]) ======(기본 transform()돤 rgb 이미지로부터 변환된 결과 값)\n",
+      "====== ycbcr_img: torch.Size([256, 256, 3]) ======\n",
       "ycbcr_img[0].min(): -0.0261\tycbcr_img[0].max(): 1.0000\n",
       "ycbcr_img[1].min(): -0.0238\tycbcr_img[1].max(): 1.0000\n",
       "ycbcr_img[2].min(): -0.0183\tycbcr_img[2].max(): 0.9964\n",
       "\n",
       "\n",
-      "====== lab_img: torch.Size([256, 256, 3]) ======(기본 transform()돤 rgb 이미지로부터 변환된 결과 값)\n",
+      "====== lab_img: torch.Size([256, 256, 3]) ======\n",
       "lab_img[0].min(): -52.5376\tlab_img[0].max(): 100.0000\n",
       "lab_img[1].min(): -52.5533\tlab_img[1].max(): 100.0000\n",
       "lab_img[2].min(): -52.5376\tlab_img[2].max(): 99.8046\n",
       "\n",
-      "====== lch_img: torch.Size([256, 256, 3]) ======(기본 transform()돤 rgb 이미지로부터 변환된 결과 값)\n",
+      "====== lch_img: torch.Size([256, 256, 3]) ======\n",
       "lch_img[0].min(): 0.0053\tlch_img[0].max(): 100.0000\n",
       "lch_img[1].min(): 0.0053\tlch_img[1].max(): 100.0000\n",
       "lch_img[2].min(): 0.0827\tlch_img[2].max(): 99.8046\n"
