--- a/RGB2NIR/Pix2Pix_based_RGB2NIR.ipynb
+++ b/RGB2NIR/Pix2Pix_based_RGB2NIR.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Research_Utils.color_space_transforms import *\n",
+    "from Research_Utils.color_space_transforms import *\n\n",
     "transform_basic = transforms.Compose([\n",
     "    transforms.ToTensor(), \n",
     "    transforms.Resize((256,256)),\n",
@@ -73,7 +73,7 @@
     "])\n",
     "\n",
     "transform_to_YCbCr = transforms.Compose([\n",
-    "    # dataloader에서 가져올 때 이미 tensor로 변환되고 normalize도 되었으므로, 여기서는 색 공간 변환만 처리함.\n",
+    "    # dataloader에서 가져올 때 이미 tensor로 변환되었으므로, 여기서는 색 공간 변환만 처리함.\n",
     "    RGB2YCbCrTransform(BT=\"2020\"),  # 사용자 정의 변환기 추가\n",
     "])\n",
     "\n",
