--- a/RGB2NIR/Pix2Pix_based_RGB2NIR.ipynb
+++ b/RGB2NIR/Pix2Pix_based_RGB2NIR.ipynb
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generator 모델 생성\n",
+    "# Generator, Discriminator 모델 생성\n",
     "from Research_Utils.Pix2Pix_Model import *\n",
     "\n",
     "model_gen = NIR_GeneratorUNet(in_channels=3, out_channels=3).to(device)\n",
